# haunt

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/haunt/: __init__.py  cli.py  exceptions.py  models.py  output.py  registry.py
src/haunt/_cli/: cli.py  output.py
src/haunt/_files/: cleanup.py  paths.py  symlinks.py
src/haunt/files/: __init__.py  cleanup.py  discover.py  symlinks.py
src/haunt/operations/: __init__.py  install.py  paths.py  uninstall.py
tests/: test_exceptions.py  test_registry.py
tests/files/: test_cleanup.py  test_discover.py  test_symlinks.py
tests/operations/: test_install.py  test_paths.py  test_uninstall.py  test_unwanted_symlinks.py
