[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haunt"
version = "0.1.1"
description = "Symlink dotfiles manager"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Mike Lee Williams", email = "mike@mike.place"},
]
keywords = ["dotfiles", "symlink"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.9.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
haunt = "haunt.cli:main"

[project.urls]
Homepage = "https://github.com/mikepqr/haunt"
Repository = "https://github.com/mikepqr/haunt"
Issues = "https://github.com/mikepqr/haunt/issues"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
strict = true
